--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style>
         #sentence {
             font-size: 4em;
-            color: #FDFE00;
+            color: #BB11DD;
             position: absolute;
             top: 35%;
             left: 50%;
